--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <script src="assets/js/lib/jquery-3.5.1.js"></script>
 </head>
 <body>
-    
+    <div id="container">
+        <h1>To-Do List</h1>
+        <input type="text">
+
+        <ul>
+            <li><span>X</span> Go to EECS 485</li>
+            <li><span>X</span> Get lunch with Sid</li>
+            <li><span>X</span> Study at the library</li>
+        </ul>
+    </div>
     <script src="assets/js/todos.js"></script>
 </body>
 </html>
