--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="assets/js/lib/jquery-3.5.1.js"></script>
 </head>
+
 <body>
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text">
+        <h1>To-Do List <i class="fa fa-plus"></i></h1>
+        <input type="text" placeholder="Add New Todo">
 
         <ul>
-            <li><span>X</span> Go to EECS 485</li>
-            <li><span>X</span> Get lunch with Sid</li>
-            <li><span>X</span> Study at the library</li>
+            <li><span><i class="fa fa-trash"></i></span> Go to EECS 485</li>
+            <li><span><i class="fa fa-trash"></i></span> Get lunch with Sid</li>
+            <li><span><i class="fa fa-trash"></i></span> Study at the library</li>
         </ul>
     </div>
     <script src="assets/js/todos.js"></script>
